Repo URI changed.

--- a/public/images/browser_not_support/index.html
+++ b/public/images/browser_not_support/index.html
@@ -106,7 +106,7 @@
             </ul>
         </div>
         <div class=tech-support>
-            <a href="mailto:xuri.me@gmail.com">luxurioust</a>
+            <a href="mailto:xuri.me#gmail.com">Ri Xu</a>
         </div>
     </div>
     <!-- not-support-browser div end -->
